Heart disease and chest pain analysis

--- a/Heart Disease Research Part II/heart-disease-research-part-2.ipynb
+++ b/Heart Disease Research Part II/heart-disease-research-part-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
-    "from scipy.stats import ttest_ind, f_oneway\n",
+    "from scipy.stats import ttest_ind, f_oneway, chi2_contingency\n",
     "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n"
    ]
   },
@@ -483,6 +483,108 @@
     "# there is significance -> perform Tukey's range test\n",
     "tukey_results = pairwise_tukeyhsd(heart.thalach, heart.cp, 0.05)\n",
     "print(tukey_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>absence</th>\n",
+       "      <th>presence</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>asymptomatic</th>\n",
+       "      <td>39</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>atypical angina</th>\n",
+       "      <td>41</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>non-anginal pain</th>\n",
+       "      <td>68</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>typical angina</th>\n",
+       "      <td>16</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "heart_disease     absence  presence\n",
+       "cp                                 \n",
+       "asymptomatic           39       105\n",
+       "atypical angina        41         9\n",
+       "non-anginal pain       68        18\n",
+       "typical angina         16         7"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# contingency table or chest pain and heart disease\n",
+    "xtab = pd.crosstab(heart.cp, heart.heart_disease)\n",
+    "xtab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2517106007837527e-17"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# run chi square analysis between cp and hd\n",
+    "chi2, pval, dof, expected = chi2_contingency(xtab)\n",
+    "pval"
    ]
   },
   {
