--- a/A/B Testing at Nosh Mish Mosh/A/B testing.ipynb
+++ b/A/B Testing at Nosh Mish Mosh/A/B testing.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import data\n",
+    "import noshmishmosh\n",
+    "\n",
+    "# import necessary libraries\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +28,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
