collect data + calculate baseline conversion rate

--- a/A/B Testing at Nosh Mish Mosh/A/B testing.ipynb
+++ b/A/B Testing at Nosh Mish Mosh/A/B testing.ipynb
@@ -15,6 +15,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separate information from the data\n",
+    "all_visitors = noshmishmosh.customer_visits\n",
+    "paying_visitors = noshmishmosh.purchasing_customers\n",
+    "total_visitor_count = len(all_visitors)\n",
+    "paying_visitor_count = len(paying_visitors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate Baseline conversion rate\n",
+    "baseline_percent = paying_visitor_count / total_visitor_count * 100\n",
+    "baseline_percent"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
