--- a/A-B Testing at Nosh Mish Mosh/B testing.ipynb
+++ b/A-B Testing at Nosh Mish Mosh/B testing.ipynb
@@ -9,7 +9,7 @@
     "# import data\n",
     "import noshmishmosh\n",
     "\n",
-    "# import necessary libraries\n",
+    "# import necessary library\n",
     "import numpy as np"
    ]
   },
