Analyse artery pack and compare to vein pack

--- a/Familiar - A Study in Data Analysis/Familiar.ipynb
+++ b/Familiar - A Study in Data Analysis/Familiar.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import ttest_1samp"
+    "from scipy.stats import ttest_1samp, ttest_ind"
    ]
   },
   {
@@ -151,6 +151,52 @@
    "metadata": {},
    "source": [
     "##### Analyse Artery pack #####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.8736622351704"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract lifespan of subscribers of the 'artery' pack\n",
+    "artery_pack_lifespans = lifespans.lifespan[lifespans.pack == 'artery']\n",
+    "avg_artery_lifespan = np.mean(artery_pack_lifespans)\n",
+    "avg_artery_lifespan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05588883079070819"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run a significance test to see if there is a difference for the average lifespan\n",
+    "# between vein and artery subscribers\n",
+    "tstat, pval = ttest_ind(vein_pack_lifespans, artery_pack_lifespans)\n",
+    "pval"
    ]
   },
   {
