Analyse iron data and association between groups

--- a/Familiar - A Study in Data Analysis/Familiar.ipynb
+++ b/Familiar - A Study in Data Analysis/Familiar.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import ttest_1samp, ttest_ind"
+    "from scipy.stats import ttest_1samp, ttest_ind, chi2_contingency"
    ]
   },
   {
@@ -196,6 +196,188 @@
     "# Run a significance test to see if there is a difference for the average lifespan\n",
     "# between vein and artery subscribers\n",
     "tstat, pval = ttest_ind(vein_pack_lifespans, artery_pack_lifespans)\n",
+    "pval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Side Effects #####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pack</th>\n",
+       "      <th>iron</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>vein</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>artery</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>artery</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>artery</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>artery</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pack    iron\n",
+       "0    vein     low\n",
+       "1  artery  normal\n",
+       "2  artery  normal\n",
+       "3  artery  normal\n",
+       "4  artery    high"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iron.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>pack</th>\n",
+       "      <th>artery</th>\n",
+       "      <th>vein</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>iron</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>high</th>\n",
+       "      <td>87</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>low</th>\n",
+       "      <td>29</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>normal</th>\n",
+       "      <td>29</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "pack    artery  vein\n",
+       "iron                \n",
+       "high        87    20\n",
+       "low         29   140\n",
+       "normal      29    40"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create contingency table for the two columns in iron\n",
+    "xtab = pd.crosstab(iron.iron, iron.pack)\n",
+    "xtab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.359749337432874e-25"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run a significance test to see if there is an association between a pack \n",
+    "# someone subscribes to and their iron level\n",
+    "chi2, pval, dpf, expected = chi2_contingency(xtab)\n",
     "pval"
    ]
   },
