Import data and analyse whippet dog hypothesis

--- a/FetchMaker/FetchMaker.ipynb
+++ b/FetchMaker/FetchMaker.ipynb
@@ -2,6 +2,184 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import binom_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>is_rescue</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>tail_length</th>\n",
+       "      <th>age</th>\n",
+       "      <th>color</th>\n",
+       "      <th>likes_children</th>\n",
+       "      <th>is_hypoallergenic</th>\n",
+       "      <th>name</th>\n",
+       "      <th>breed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>2</td>\n",
+       "      <td>black</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Huey</td>\n",
+       "      <td>chihuahua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.36</td>\n",
+       "      <td>4</td>\n",
+       "      <td>black</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cherish</td>\n",
+       "      <td>chihuahua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>3</td>\n",
+       "      <td>black</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Becka</td>\n",
+       "      <td>chihuahua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>black</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Addie</td>\n",
+       "      <td>chihuahua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>black</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Beverlee</td>\n",
+       "      <td>chihuahua</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   is_rescue  weight  tail_length  age  color  likes_children  \\\n",
+       "0          0       6         2.25    2  black               1   \n",
+       "1          0       4         5.36    4  black               0   \n",
+       "2          0       7         3.63    3  black               0   \n",
+       "3          0       5         0.19    2  black               0   \n",
+       "4          0       5         0.37    1  black               1   \n",
+       "\n",
+       "   is_hypoallergenic      name      breed  \n",
+       "0                  0      Huey  chihuahua  \n",
+       "1                  0   Cherish  chihuahua  \n",
+       "2                  1     Becka  chihuahua  \n",
+       "3                  0     Addie  chihuahua  \n",
+       "4                  1  Beverlee  chihuahua  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import data\n",
+    "dogs = pd.read_csv('dog_data.csv')\n",
+    "dogs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "100\n",
+      "0.5811780106238108\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Fatemeh\\AppData\\Local\\Temp\\ipykernel_74536\\2892383589.py:10: DeprecationWarning: 'binom_test' is deprecated in favour of 'binomtest' from version 1.7.0 and will be removed in Scipy 1.12.0.\n",
+      "  pval = binom_test(num_whippet_rescues, num_whippets, p = 0.08)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if Whippets are significantly more or less likely than other dogs\n",
+    "# to be a rescue\n",
+    "whippet_rescue = dogs.is_rescue[dogs.breed == 'whippet']\n",
+    "num_whippet_rescues = np.sum(whippet_rescue == 1)\n",
+    "print(num_whippet_rescues)\n",
+    "\n",
+    "num_whippets = len(whippet_rescue)\n",
+    "print(num_whippets)\n",
+    "\n",
+    "pval = binom_test(num_whippet_rescues, num_whippets, p = 0.08)\n",
+    "print(pval)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +193,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
