--- a/FetchMaker/FetchMaker.ipynb
+++ b/FetchMaker/FetchMaker.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import binom_test"
+    "from scipy.stats import binom_test, f_oneway\n",
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd"
    ]
   },
   {
@@ -176,6 +177,50 @@
     "\n",
     "pval = binom_test(num_whippet_rescues, num_whippets, p = 0.08)\n",
     "print(pval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Subset to just whippets, terriers, and pitbulls\n",
+    "dogs_wtp = dogs[dogs.breed.isin(['whippet', 'terrier', 'pitbull'])]\n",
+    "wt_whippets = dogs_wtp.weight[dogs_wtp.breed == 'whippet']\n",
+    "wt_terriers = dogs_wtp.weight[dogs_wtp.breed == 'terrier']\n",
+    "wt_pitbulls = dogs_wtp.weight[dogs_wtp.breed == 'pitbull']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.276415588274815e-17\n",
+      "  Multiple Comparison of Means - Tukey HSD, FWER=0.05  \n",
+      "=======================================================\n",
+      " group1  group2 meandiff p-adj   lower    upper  reject\n",
+      "-------------------------------------------------------\n",
+      "pitbull terrier   -13.24    0.0 -16.7278 -9.7522   True\n",
+      "pitbull whippet    -3.34 0.0638  -6.8278  0.1478  False\n",
+      "terrier whippet      9.9    0.0   6.4122 13.3878   True\n",
+      "-------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run an ANOVA hypothesis test to check if the weights of all three breeds are the same\n",
+    "fstat, pval = f_oneway(wt_whippets, wt_terriers, wt_pitbulls)\n",
+    "print(pval)\n",
+    "\n",
+    "# There is significance so we run a Tukey's Range Test\n",
+    "tukey_results = pairwise_tukeyhsd(dogs_wtp.weight, dogs_wtp.breed, 0.05)\n",
+    "print(tukey_results)"
    ]
   },
   {
