Chi-square test for specific dog breed and color

--- a/FetchMaker/FetchMaker.ipynb
+++ b/FetchMaker/FetchMaker.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import binom_test, f_oneway\n",
+    "from scipy.stats import binom_test, f_oneway, chi2_contingency\n",
     "from statsmodels.stats.multicomp import pairwise_tukeyhsd"
    ]
   },
@@ -225,10 +225,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Subset to just poodles and shihtzus\n",
+    "dogs_ps = dogs[dogs.breed.isin(['poodle', 'shihtzu'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color    black  brown  gold  grey  white\n",
+      "breed                                   \n",
+      "poodle      17     13     8    52     10\n",
+      "shihtzu     10     36     6    41      7\n",
+      "0.005302408293244597\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run hypothesis test for an association between poodle, shihtzu dog breeds and colors\n",
+    "xtab = pd.crosstab(dogs_ps.breed, dogs_ps.color)\n",
+    "print(xtab)\n",
+    "\n",
+    "chi2, pval, dof, expected = chi2_contingency(xtab)\n",
+    "print(pval)"
+   ]
   }
  ],
  "metadata": {
